change to layout

--- a/src/app.css
+++ b/src/app.css
@@ -59,7 +59,6 @@ a {
     padding: 0;
     top: 60px;
     z-index: 1;
-    background: url('images/background.png')
 }
 
 .upload-text {
@@ -67,14 +66,24 @@ a {
 }
 
 .dropzone {
-    border: none;
-    background: url('/images/file.png') no-repeat center;
-    cursor: pointer;
+    border-radius: 15px;
+    background: url('images/background.png');
     width: 50%;
     margin: 0 auto;
     padding: 0;
     border: 2px dashed #494C66;
     min-height: 400px;
+    position: relative;
+    top: 50%;
+    margin-top: -200px;
+}
+
+.fileicon {
+    background: url('/images/file.png') no-repeat center;
+    width: 326px;
+    height: 256px;
+    margin: 50px auto;
+    pointer-events: none;
 }
 
 .dropzone.dz-drag-hover {
