--- a/src/app.css
+++ b/src/app.css
@@ -139,15 +139,19 @@ a {
 }
 
 .faq {
-    width: 100%;
+    width: 600px;
     text-align: left;
-    margin-top: 60px;
-    padding: 0 193px;
+    margin: 60px auto;
 }
 
 .faq .list-item .title {
     font-weight: bold;
     color: #0b97c4;
+}
+
+.faq .list-item .content {
+    padding: 0 23px;
+    display: none;
 }
 
 .token-link {
