--- a/src/app.css
+++ b/src/app.css
@@ -1,11 +1,19 @@
 body {
-    background-color: #242424;
-    color: #f5f5f5;
+    background: #242424 url('/images/bg.png');
+    color: #9496C6;
+    font-family: Verdana;
+}
+
+.header {
+    padding: 16px;
+    width: 100%;
+    text-align: center;
+    color: #37374A;
 }
 
 .upload-box {
     width: 512px;
-    height: 150px;
+    height: 512px;
     position: absolute;
     top:0;
     bottom: 0;
@@ -19,19 +27,32 @@ body {
 }
 
 .dropzone { 
-    border: 2px dashed #f5f5f5; 
+    border: 2px dashed #283050; 
     border-radius: 5px;
-    background: #201E1E;
+    background: url('/images/file.png') no-repeat center;
     cursor: pointer;
+    min-height: 512px;
+}
+
+.dropzone-text {
+    width: 100%;
+    text-align: center;
+    font-size: 24px;
+    pointer-events: none;
 }
 
 .download-box {
     width: 512px;
-    height: 150px;
+    height: 512px;
+    text-align: center;
     position: absolute;
     top:0;
     bottom: 0;
     left: 0;
     right: 0;
     margin: auto;
+}
+
+.dz-message {
+    display: none;
 }
