--- a/src/app.css
+++ b/src/app.css
@@ -8,9 +8,14 @@ body {
     margin: 0;
     padding: 0;
     background: #fbfbfb;
-    color: #9496C6;
+    color: #494C66;
     height: 100%;
     min-height: 100%;
+    font-family: Verdana;
+}
+
+a {
+    color: #6D7593;
 }
 
 .header {
@@ -18,7 +23,7 @@ body {
     text-align: center;
     color: #37374A;
     background: #fff;
-    height: 60px;
+    height: 48px;
     padding: 10px;
     border-bottom: 1px solid #E2E2E2;
     position: absolute;
@@ -28,7 +33,7 @@ body {
 
 .header .logo {
     font-family: monospace;
-    font-size: 32px;
+    font-size: 24px;
     float: right;
 }
 
@@ -36,7 +41,7 @@ body {
     font-family: Tahoma;
     float: left;
     font-size: 16px;
-    margin-top: 10px;
+    margin-top: 4px;
 }
 
 .header-separator {
@@ -60,13 +65,15 @@ body {
     font-size: 20px;
 }
 
-.dropzone { 
+.dropzone {
     border: none;
     background: url('/images/file.png') no-repeat center;
     cursor: pointer;
-    height: 100%;
+    width: 50%;
+    margin: 0 auto;
     padding: 0;
-    border: 2px solid #fbfbfb;
+    border: 2px dashed #494C66;
+    min-height: 400px;
 }
 
 .dropzone.dz-drag-hover {
@@ -106,15 +113,14 @@ body {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 52px;
     border-top: 1px solid #E2E2E2;
     background-color: #fff;
     z-index: 2;
 }
 
 .footer .flink {
-    float: right;
-    color: #8C8C8C;
-    margin: 19px;
+    position: relative;
+    color: #666666;
     z-index: 2;
 }
