--- a/src/app.css
+++ b/src/app.css
@@ -28,7 +28,6 @@ a {
     border-bottom: 1px solid #E2E2E2;
     position: absolute;
     top: 0;
-    z-index: 2;
 }
 
 .header .logo {
@@ -50,15 +49,12 @@ a {
 }
 
 .container {
-    width: 100%;
-    height: 100%;
+    width: 80%;
     text-align: center;
-    height: calc(100% - 120px);
     position: relative;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     top: 60px;
-    z-index: 1;
 }
 
 .upload-text {
@@ -67,15 +63,15 @@ a {
 
 .dropzone {
     background: url('images/background.png');
-    width: 50%;
     margin: 0 auto;
     padding: 0;
     border: 2px dashed #494C66;
     min-height: 400px;
+    min-width: 400px;
+    width: 600px;
     border-radius: 32px;
     position: relative;
-    top: 50%;
-    margin-top: -200px;
+    top: 64px;
 }
 
 .fileicon {
@@ -126,11 +122,19 @@ a {
     height: 52px;
     border-top: 1px solid #E2E2E2;
     background-color: #fff;
-    z-index: 2;
 }
 
 .footer .flink {
     position: relative;
     color: #666666;
-    z-index: 2;
+}
+
+.faq {
+    width: 100%;
+    text-align: center;
+}
+
+.token-link {
+    font-size: 32px;
+    color: #6666B5;
 }
