--- a/src/app.css
+++ b/src/app.css
@@ -22,10 +22,10 @@ a {
     width: 100%;
     text-align: center;
     color: #37374A;
-    background: #fff;
+    background: #f5f5f5;
     height: 48px;
     padding: 10px;
-    border-bottom: 1px solid #E2E2E2;
+    border-bottom: 1px solid #e5e5e5;
     position: absolute;
     top: 0;
 }
@@ -120,8 +120,8 @@ a {
     bottom: 0;
     width: 100%;
     height: 52px;
-    border-top: 1px solid #E2E2E2;
-    background-color: #fff;
+    border-top: 1px solid #e5e5e5;
+    background-color: #f5f5f5;
 }
 
 .footer .flink {
