--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: FiraSans;
+    src:
+        url('fonts/FiraSans-Light.woff2') format('woff2'),
+        url('fonts/FiraSans-Light.woff') format('woff');
+}
+
 html {
     margin: 0;
     padding: 0;
@@ -11,7 +18,7 @@ body {
     color: #494C66;
     height: 100%;
     min-height: 100%;
-    font-family: Verdana;
+    font-family: FiraSans;
 }
 
 a {
@@ -31,13 +38,11 @@ a {
 }
 
 .header .logo {
-    font-family: monospace;
     font-size: 24px;
     float: right;
 }
 
 .header .info {
-    font-family: Tahoma;
     float: left;
     font-size: 16px;
     margin-top: 4px;
