--- a/src/app.css
+++ b/src/app.css
@@ -30,8 +30,8 @@ a {
     text-align: center;
     color: #37374A;
     background: #f5f5f5;
-    height: 48px;
-    padding: 10px;
+    height: 24px;
+    padding: 6px 0 6px 0;
     border-bottom: 1px solid #e5e5e5;
     position: absolute;
     top: 0;
@@ -42,12 +42,14 @@ a {
     float: right;
     position: relative;
     top: -2px;
+    right: 8px;
 }
 
 .header .info {
     float: left;
     font-size: 16px;
     margin-top: 4px;
+    margin-left: 8px;
 }
 
 .header-separator {
@@ -132,7 +134,7 @@ a {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 52px;
+    height: 56px;
     border-top: 1px solid #e5e5e5;
     background-color: #f5f5f5;
 }
