--- a/src/app.css
+++ b/src/app.css
@@ -25,24 +25,16 @@ a {
     color: #6D7593;
 }
 
-.header {
+.hero .header {
     width: 100%;
-    text-align: center;
     color: #37374A;
     background: #f5f5f5;
-    height: 24px;
-    padding: 6px 0 6px 0;
     border-bottom: 1px solid #e5e5e5;
-    position: absolute;
-    top: 0;
 }
 
 .header .logo {
     font-size: 24px;
-    float: right;
-    position: relative;
-    top: -2px;
-    right: 8px;
+    margin-right: 4px;
 }
 
 .header .info {
@@ -57,15 +49,6 @@ a {
     border: 1px solid #eee;
 }
 
-.container {
-    width: 80%;
-    text-align: center;
-    position: relative;
-    margin: 0 auto;
-    padding: 0;
-    top: 60px;
-}
-
 .upload-text {
     font-size: 20px;
 }
@@ -76,11 +59,8 @@ a {
     padding: 0;
     border: 2px dashed #494C66;
     min-height: 400px;
-    min-width: 400px;
-    width: 600px;
+    min-width: 600px;
     border-radius: 32px;
-    position: relative;
-    top: 64px;
 }
 
 .dropzone:hover {
@@ -131,12 +111,7 @@ a {
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 40px;
     border-top: 1px solid #e5e5e5;
-    background-color: #f5f5f5;
 }
 
 .footer .flink {
