--- a/src/app.css
+++ b/src/app.css
@@ -88,6 +88,15 @@ a {
     top: 22px;
 }
 
+.dropzone-subtext {
+    width: 100%;
+    text-align: center;
+    font-size: 24px;
+    pointer-events: none;
+    position: relative;
+    bottom: 22px;
+}
+
 .download-box {
     width: 512px;
     height: 512px;
