--- a/src/app.css
+++ b/src/app.css
@@ -37,46 +37,34 @@ a {
 }
 
 .header .logo {
-    font-size: 24px;
-    margin-right: 4px;
+    font-size: 2em;
+    margin-right: 0.2em;
     cursor: pointer;
 }
 
 .header .info {
     float: left;
-    font-size: 16px;
-    margin-top: 4px;
-    margin-left: 8px;
-}
-
-.header-separator {
-    margin-top: 56px;
-    border: 1px solid #eee;
-}
-
-.upload-text {
-    font-size: 20px;
+    font-size: 1.2em;
+    padding-left: 0.4em !important;
 }
 
 .dropzone {
     background: url('images/background.png');
     margin: 0 auto;
-    padding: 8px;
+    padding: 0 2em 0 2em;
     border: 1px dashed #494C66;
-    min-height: 400px;
-    border-radius: 32px;
+    border-radius: 2em;
 }
 
 .dropzone:hover {
     border: 1px solid #C9C9CA;
-    background: #F8F6F6;
 }
 
 .fileicon {
-    background: url('/images/file.png') no-repeat center;
-    width: 326px;
-    height: 256px;
-    margin: 50px auto;
+    background: url('/images/file.svg') no-repeat center;
+    background-size: 16em 16em;
+    height: 16em;
+    margin: 4em auto;
     pointer-events: none;
 }
 
@@ -87,37 +75,19 @@ a {
 .dropzone-text {
     width: 100%;
     text-align: center;
-    font-size: 24px;
+    font-size: 2em;
     pointer-events: none;
     position: relative;
-    top: 22px;
+    top: 0.65em;
 }
 
 .dropzone-subtext {
     width: 100%;
     text-align: center;
-    font-size: 24px;
+    font-size: 2em;
     pointer-events: none;
     position: relative;
-    bottom: 22px;
-}
-
-.download-box {
-    width: 512px;
-    height: 512px;
-    text-align: center;
-    position: absolute;
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-.url-box {
-    border: none;
-    background: #fbfbfb;
-    width: 550px;
+    bottom: 0.65em;
 }
 
 .dz-message {
@@ -128,16 +98,11 @@ a {
     border-top: 1px solid #e5e5e5;
 }
 
-.footer .flink {
-    position: relative;
-    color: #666666;
-}
-
 .faq {
     display: none;
     text-align: left;
-    margin: 8px auto 0;
-    font-size: 15px;
+    margin: 0.1em auto 0;
+    font-size: 1.0em;
 }
 
 .faq.shown {
@@ -147,9 +112,9 @@ a {
 .faq .list-item .title {
     font-weight: bold;
     color: #0b97c4;
-    font-size: 15px;
+    font-size: 1.0em;
     margin: 0;
-    margin-top: 8px;
+    margin-top: 0.25em;
     cursor: pointer;
 }
 
@@ -158,29 +123,28 @@ a {
 }
 
 .faq .list-item .title i {
-    font-size: 15px;
+    font-size: 1.0em;
 }
 
 .faq .list-item .content {
-    padding: 0 23px;
     height: auto;
-    max-height: 0px;
+    max-height: 0em;
     overflow: hidden;
     transition: max-height 350ms ease;
     -webkit-transition: max-height 350ms ease;
 }
 
 .faq .list-item .content.show {
-    max-height: 250px;
+    max-height: 8em;
 }
 
 .faq .list-item .content .inner-content {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 0.45em;
+    margin-bottom: 0.45em;
 }
 
 .token-link {
-    font-size: 32px;
+    font-size: 2em;
     color: #6666B5;
     z-index: 2;
 }
@@ -192,24 +156,23 @@ a {
 .progress-bar {
     background-color: #6B6B93;
     color: #fafafa;
-    padding: 8px;
-    border-radius: 8px;
+    padding: 1em;
+    border-radius: 1em;
 }
 
 .progress {
     width: 100%;
     background-color: #cccccc;
-    border-radius: 8px;
+    border-radius: 1em;
     color: #fafafa;
-    border-radius: 8px;
 }
 
 .show-faq {
-    margin-top: 16px;
+    margin-top: 1em;
 }
 
 .beta-tag {
     font-variant: small-caps;
-    font-size: 12px;
+    font-size: 0.25em;
     color: #A9A9A9;
 }
