--- a/app.css
+++ b/app.css
@@ -36,10 +36,9 @@ a {
     background: #fafafa;
 }
 
-.header .logo {
-    font-size: 2em;
-    margin-right: 0.2em;
-    cursor: pointer;
+.logo {
+    font-size: 3em;
+    margin-top: 0.25em;
 }
 
 .header .info {
